--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,8 @@
 
 html {
   scroll-behavior: smooth;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   scroll-snap-type: y mandatory;
 }
 
@@ -30,7 +31,7 @@ section {
 }
 
 canvas {
-  display: block;
+  /* display: block; */
 }
 
 .top {
